# pokemon-mcp

./: .gitignore  README.md  __init__.py  mcp_client_groq.py  mcp_client_openai.py  pokemon_mcp.py  pyproject.toml  web_interface.py
modules/: __init__.py  comparison.py  info_retrieval.py  logger.py  strategy.py  team_composition.py
