[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.4",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.9.2",
    "python-dotenv>=1.1.0",
    "sseclient-py>=1.8.0",
    "uvicorn>=0.34.2",
]
